--- a/app/views/partials/main.html
+++ b/app/views/partials/main.html
@@ -2,7 +2,7 @@
 
 
 <div class="jumbotron">
-  <h1> <--- Veldu leik<span ng-show="currentUser">{{ currentUser.name }}</span>!</h1>
+  <h1> Veldu leik <span ng-show="currentUser">{{ currentUser.name }}</span>!</h1>
   <p class="lead">
 
   </p>
